# webdreamer

./: .gitignore  .gitmodules  README.md  format.sh  project.env  pyproject.toml  run.sh
.cluster/: _setup.sh
.cluster/sge/: _qsub_config.sh
.cluster/slurm/: _sbatch_config.sh  _sbatch_config.txt
.githooks/: post-checkout  pre-commit
src/: .env  __cli__.py  postinstall.sh  preinstall.sh  requirements-accelerator-device.txt  requirements-cpu.txt  requirements-dev.txt  requirements.txt
src/project/: report.py
src/tasks/webarena_eval/: __init__.py  _datadreamer_support.py  _llm_server.py  _patch_webarena.py  _warnings_silencer.py
src/tasks/webarena_train/: __init__.py  _augmentation_helpers.py  _dataset_from_trajectories.py  _seed_trajectories.py
webarena_benchmark_docker_env/: .gitignore  build_sandbox_images.sh  download_docker_images.sh  restart.py  run_docker_images.sh  run_docker_images_helper.sh  webarena_env.txt
